# videditor

./: .dev.vars.example  .env.example  .gitignore  CLAUDE.md  Dockerfile.frontend  Dockerfile.jobs  FRONTEND_MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  QUICKSTART.md  README.md  README_CLOUDFLARE.md  drizzle.config.ts  fly.frontend.toml  fly.jobs.toml  middleware.ts  next.config.js  package-lock.json  package.json  r2-cors-config.json  tailwind.config.ts  tsconfig.backend.json  tsconfig.json  wrangler.toml
apps/jobs/: config.py  database.py  logger.py  main.py  models.py  processor.py  pyproject.toml  server.py  worker.py
apps/jobs/utils/: __init__.py  ai.py  ffmpeg.py  storage.py  transcription.py
components/: MonkeyLogo.tsx  shorts-side-panel.tsx  video-lightbox.tsx  video-upload.tsx
components/layout/: Sidebar.tsx  WorkspaceLayout.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  input.tsx  progress.tsx
db/: index.ts  relations.ts  schema.ts
db/queries/: jobs.ts  projects.ts  shorts.ts  transcriptions.ts  users.ts
drizzle/migrations/: 0000_lame_santa_claus.sql  0000_melodic_alex_wilder.sql  0001_rename_to_stream_only.sql  0002_harsh_skullbuster.sql  0003_panoramic_medusa.sql  0004_concerned_roughhouse.sql  0005_crazy_warlock.sql  (+3 more)
migrations/: README.md
migrations.old/: 0001_initial_schema.sql
pages/: _app.tsx  _document.tsx  index.tsx
scripts/: create-test-video.sh  init-cloudflare.sh  test-upload.js
styles/: globals.css
types/: d1.ts  database.ts  projects.ts  shorts.ts
workers/: env.ts  index.ts
(+68 files in other folders)
